--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "stylelint-scss": "^3.18.0"
   },
   "scripts": {
-    "format": "npx prettier  --write **/*.{html,js,json,md,json,yaml,yml,jsx}",
-    "format:check": "npx prettier  --check **/*.{html,js,json,md,json,yaml,yml}",
+    "format": "npx prettier  --write **/*.{html,json,md,json,yaml,yml,jsx}",
+    "format:check": "npx prettier  --check **/*.{html,json,md,json,yaml,yml}",
     "lint": "npx stylelint \"**/*.css\" --fix",
     "lint:check": "npx stylelint \"**/*.css\"",
     "hint": "npx hint --telemetry=off ."
