--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "html-css-template",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "swiper": "^8.2.2"
+  },
   "devDependencies": {
     "hint": "^6.1.0",
     "prettier": "1.18.2",
